# Zomboid2.0

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c
client/: CMakeLists.txt  MenuModel.xcf  main.c  messageTypes.h  sockets.h
client/game/: game.c  game.h  loader.c  loader.h  objectInclude.h  score.c  score.h
client/game/objects/: bloodSpawner.c  bloodSpawner.h  enemy.h  playerData.h  score.c  score.h  weapon.c  weapon.h
client/game/objects/main/box/: obj_box.c  obj_box.h
client/game/objects/main/bullet/: obj_bullet.c  obj_bullet.h  obj_explosion.c  obj_explosion.h
client/game/objects/main/enemy/: obj_enemy.c  obj_enemy.h  obj_enemy_body.c  obj_enemy_body.h  obj_enemy_ghost.c  obj_enemy_ghost.h  obj_enemy_slicer.c  obj_enemy_slicer.h  obj_enemy_slug.c  obj_enemy_slug.h  obj_enemy_tic.c  obj_enemy_tic.h  obj_enemy_zombie.c  obj_enemy_zombie.h
client/game/objects/main/flashlight/: obj_flashlight.c  obj_flashlight.h
client/game/objects/main/gameController/: obj_gameController.c  obj_gameController.h
client/game/objects/main/hud/: obj_hud.c  obj_hud.h
client/game/objects/main/light/: obj_light.c  obj_light.h  obj_light_tracer.c  obj_light_tracer.h  obj_rotatable_light.c  obj_rotatable_light.h
client/game/objects/main/networkController/: obj_netController.c  obj_netController.h
client/game/objects/main/player/: obj_player.c  obj_player.h
client/game/objects/menu/: object_beetle_spawner.c  object_beetle_spawner.h  object_button.c  object_button.h  object_menu.c  object_menu.h  object_menu_beetle.c  object_menu_beetle.h
client/game/objects/menu/controls/: control_composer.c  control_composer.h  object_control_button.c  object_control_button.h  object_control_label.c  object_control_label.h
client/lib/: appInit.c  appInit.h  eventfuncs.h  gameHelpers.h  gameScene.c  gameobject.h  helpers.c  helpers.h  structs.c  structs.h  surface.c  surface.h
client/lib/gameLogic/: eventFuncs.c  eventQueue.c  eventQueue.h  eventfuncs.c  eventfuncs.h  gameHelpers.c  gameHelpers.h  gameObject.c  gameObject.h  gameScene.c  gameScene.h  gameobject.c  gameobject.h
client/lib/graphics/: drawer.c  drawer.h  gmath.c  gmath.h  shader.c  shader.h  surface.c  surface.h
client/lib/ltracer/: ltracer.c  ltracer.h  ltracer_math.c  ltracer_math.h  ltracer_structs.h
client/lib/menu/: composer.c  composer.h  menu_container.c  menu_container.h
client/lib/menu/controls/: control_button.c  control_button.h  control_input.c  control_input.h  control_label.c  control_label.h
client/lib/network/: CMakeLists.txt  messageTypes.h  metadata.c  metadata.h  sockets.c  sockets.h  test.c  testClient.c  testHost.c
client/lib/network/client/: gameClientSockets.c  gameClientSockets.h  gameSockets.c  gameSockets.h  idSockets.c  idSockets.h  serverSockets.c  serverSockets.h  sockets.c  sockets.h
client/lib/network/host/: gameHostSockets.c  gameHostSockets.h  sockets.c  sockets.h
client/lib/network/protocol/: chtp.c  chtp.h  idClient.c  idClient.h
client/lib/resources/: font.c  font.h  tex.c  tex.h  texManager.c  texManager.h
client/lib/rlist/: rlist.c  rlist.h  rlist_c.c  rlist_c.h  rlist_commands.c  rlist_commands.h
client/lib/shaders/: shader.c  shader.h  shaderManager.c  shaderManager.h
client/lib/shaders/shaders/: background.fsh  background.vsh  image.fsh  image.vsh  text.fsh  text.vsh
client/resources/: defines.rlist  images.rlist  resources.rlist  scenes.rlist  scopes.rlist
client/resources/images/enemy/zombies/: zombie.xcf
client/resources/shaders/test/: shader.vsh
game/: game.c  game.h  loader.c  loader.h  objectInclude.h
game/objects/: obj_box.c  obj_box.h  obj_bullet.c  obj_bullet.h  obj_player.c  obj_player.h
game/objects/box/: obj_box.c  obj_box.h
game/objects/bullet/: obj_bullet.c  obj_bullet.h
game/objects/flashlight/: obj_flashlight.h
game/objects/light/: obj_light.c  obj_light.h
game/objects/main/box/: obj_box.c  obj_box.h
game/objects/main/bullet/: obj_bullet.c  obj_bullet.h
game/objects/main/enemy/: obj_enemy.c  obj_enemy.h
game/objects/main/flashlight/: obj_flashlight.c  obj_flashlight.h
game/objects/main/light/: obj_light.h  obj_light_tracer.c  obj_light_tracer.h  obj_rotatable_light.c  obj_rotatable_light.h
game/objects/main/player/: obj_player.c  obj_player.h
game/objects/player/: obj_player.c  obj_player.h
lib/: appInit.c  appInit.h  client.h  drawer.c  drawer.h  eventQueue.c  eventQueue.h  eventfuncs.c  eventfuncs.h  gameHelpers.c  gameHelpers.h  gameScene.c  gameScene.h  gameobject.c  gameobject.h  graphics.c  graphics.h  helpers.c  helpers.h  host.h  idtp.c  idtp.h  netconf.h  structs.c  structs.h  surface.c  surface.h  tex.c  tex.h  texManager.c  texManager.h  zdtp.c  zdtp.h
lib/ltracer/: ltracer.c  ltracer.h  ltracer_math.c  ltracer_structs.h
lib/rlist/: rlist.c  rlist_c.c  rlist_c.h  rlist_commands.c  rlist_commands.h
resources/: defines.rlist  images.rlist  inc.rlist  resources.rlist  scenes.rlist  scopes.rlist
server/: CMakeLists.txt  actionNotifier.c  actionNotifier.h  client.c  client.h  host.h  logicHandler.c  logicHandler.h  main.c  sockets.c  sockets.h  test.c
server/handlers/: baseHandlers.c  baseHandlers.h  messageTypes.h
server/lib/network/: sockets.c  sockets.h
server/lib/protocol/: idServer.c  idServer.h  identityServer.c  identityServer.h
